src/test/deca/syntax/invalid/parser/oracle/class_name_not_ident.deca
class 0aaa extends a {}